# Mobscan

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  ADVANCED_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ENVIRONMENT.md  FINAL_REPORT.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LEIA-ME_IMPLEMENTACAO.md  README.md  README_v1.1.0_COMPLETE.md  ROADMAP.md  ROADMAP_SECURITY.md  TECHNICAL_DIAGNOSIS.md  USAGE_GUIDE.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci-cd.yaml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  INSTALLATION.md
examples/: complete_analysis_example.py  config_complete.yaml  example_usage.py  scan_config_example.yaml
mobscan/: __init__.py  cli.py  cli_professional.py  database.py
mobscan/api/: __init__.py  app.py  auth.py  schemas.py
mobscan/api/routes/: __init__.py  reports.py  results.py  scans.py
mobscan/core/: analysis_manager.py  config.py  dispatcher.py  engine.py  plugin_system.py  rules_engine.py
mobscan/examples/custom_rules/: example_custom_rule.yaml
mobscan/examples/sample_scans/: sample_scan_config.yaml
mobscan/mastg/: __init__.py  auth.py  code.py  crypto.py  network.py  platform.py  resilience.py  reverse_engineering.py  storage.py
mobscan/models/: db_models.py  finding.py  masvs_mapping.py  scan_result.py
mobscan/modules/dast/: __init__.py  dast_complete.py  dast_engine.py  dast_engine_enhanced.py  proxy_handler.py
mobscan/modules/frida/: __init__.py  frida_complete.py  frida_engine.py  frida_scripts.js  frida_scripts.py
mobscan/modules/integration/: __init__.py  adb_integration.py  mitmproxy_integration.py  mobsf_integration.py
mobscan/modules/sast/: __init__.py  ast_engine.py  sast_complete.py  sast_engine.py
mobscan/modules/sbom/: __init__.py  sbom_generator.py
mobscan/modules/sca/: sca_engine.py
mobscan/rules/: default_rules.yaml
mobscan/utils/: __init__.py  cache.py  config_validator.py  extractors.py  helpers.py  logger.py  metrics.py  retry.py  validators.py
pipelines/: Jenkinsfile  github_actions.yaml  gitlab_ci.yaml
tests/: __init__.py  test_analysis_manager.py  test_api_auth.py  test_mobscan_comprehensive.py  test_sast_module.py
tests/integration/: test_e2e_workflow.py
tests/unit/: test_models.py
